# Hardware-Course-Project

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-pi.txt
configs/: .gitignore  README.md  cifar10_smoke.yaml  mnist-e1-a0.3.yaml  mnist-e16-a0.1.yaml  mnist-e2-a0.3.yaml  mnist-e4-a0.3.yaml  mnist-e8-a0.3.yaml  mnist_dirichlet_b16_e1.yaml  mnist_iid_b16_e1.yaml  pi-demo-cifar10.yaml  pi-demo-mnist.yaml  pi_client.yaml  pi_default.yaml  pi_server.yaml  pi_smoke.yaml  pyproject.toml  smoke_cifar10_hf.yaml  smoke_mnist.yaml  smoke_mnist_hf.yaml
docs/: final_report.md
result/: mnist_comm_check_b16_e1_r10.csv  mnist_comm_sweep_optima.csv  mnist_comm_sweep_smoke_summary.csv  mnist_comm_sweep_summary.csv  mnist_comm_sweep_thresholds.csv
runs/mnist-e1-a0.3/: config.yaml  metrics.csv  metrics.jsonl
runs/mnist-e2-a0.3/: config.yaml  metrics.csv  metrics.jsonl
runs/mnist-e4-a0.3/: config.yaml  metrics.csv  metrics.jsonl
runs/mnist-e8-a0.3/: config.yaml  metrics.csv  metrics.jsonl
runs/pi-10k-mobilenetv3/: config.yaml  metrics.csv  metrics.jsonl
runs/pi-10k-resnet18/: config.yaml  metrics.csv  metrics.jsonl
runs/pi-10k-squeezenet/: config.yaml  metrics.csv  metrics.jsonl
runs/pi-demo-cifar10/: config.yaml  metrics.csv  metrics.jsonl
runs/pi-demo-mnist/: config.yaml  metrics.csv  metrics.jsonl
runs/pi-eff-squeezenet/: config.yaml  metrics.csv  (+1 more)
scripts/: run_matrix_windows.ps1  run_smoke_windows.ps1  start_pi_client.sh  start_server_windows.ps1  sync_to_pi.ps1
tests/: test_aggregator.py  test_data.py  test_partition.py  test_protocol.py
(+83 files in other folders)
